[package]
name = "streamunordered"
version = "0.5.0-alpha.2"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "An efficient async stream multiplexer"
readme = "README.md"

homepage = "https://github.com/jonhoo/streamunordered"
repository = "https://github.com/jonhoo/streamunordered.git"

categories = ["asynchronous"]

[badges]
travis-ci = { repository = "jonhoo/streamunordered" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures-core-preview = "=0.3.0-alpha.19"
futures-sink-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
slab = "0.4.0"

[dev-dependencies]
tokio = "=0.2.0-alpha.6"
async-bincode = "0.5.0-alpha.6"
bincode = "1.0.0"
