[package]
name = "streamunordered"
version = "0.5.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "An efficient async stream multiplexer"
readme = "README.md"

homepage = "https://github.com/jonhoo/streamunordered"
repository = "https://github.com/jonhoo/streamunordered.git"

categories = ["asynchronous"]

[badges]
travis-ci = { repository = "jonhoo/streamunordered" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures-core = "0.3.0"
futures-sink = "0.3.0"
futures-util = "0.3.0"
slab = "0.4.0"

[dev-dependencies]
tokio = { version = "0.2.0", features = ["full"] }
async-bincode = "0.5.0"
futures = "0.3.0"
bincode = "1.0.0"
