[package]
name = "streamunordered"
version = "0.5.4"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "An efficient async stream multiplexer"
readme = "README.md"

homepage = "https://github.com/jonhoo/streamunordered"
repository = "https://github.com/jonhoo/streamunordered.git"

categories = ["asynchronous"]

[badges]
travis-ci = { repository = "jonhoo/streamunordered" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures-core = "0.3.0"
futures-sink = "0.3.0"
futures-util = "0.3.31"
slab = "0.4.0"

[dev-dependencies]
tokio = { version = "1.6.0", features = ["full"] }
tokio-stream = "0.1.1"
async-bincode = "0.7.0"
futures = "0.3.0"
bincode = "2.0.1"
anyhow = "1.0.98"
